--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,22 +9,13 @@
     <link rel="icon" href="./Material/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/globals.css" />
     <link rel="stylesheet" href="./css/notifications.css" />
+    <link rel="stylesheet" href="./css/core-responsive.css" />
+    <link rel="stylesheet" href="./css/lang-switcher.css" />
   </head>
 
   <body
     class="min-h-screen bg-[#0A0A0A] flex items-center justify-center p-4 relative"
   >
-    <!-- Language Switcher -->
-    <div class="absolute top-4 right-4 z-50">
-      <select
-        id="languageSelect"
-        class="bg-[#1a1a1a] border border-[#333] text-white text-sm rounded-lg px-3 py-2 outline-none focus:border-blue-500 transition"
-      >
-        <option value="en">English</option>
-        <option value="hi">हिंदी</option>
-        <option value="mr">मराठी</option>
-      </select>
-    </div>
     <div class="w-full max-w-md">
       <!-- Logo Header -->
       <div class="text-center mb-8">
@@ -118,13 +109,12 @@
             class="gradient-bg w-full py-3 px-4 rounded-lg text-white font-medium hover:bg-blue-700 transition duration-200 flex items-center justify-center gap-2"
           >
             <i data-feather="log-in" class="w-5 h-5"></i>
-            <span data-i18n="signIn">Sign In</span>
+            <span>Sign In</span>
           </a>
         </form>
 
         <div class="auth-divider my-6 relative">
           <span
-            data-i18n="or"
             class="absolute left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#1a1a1a] px-4 text-sm text-gray-400"
             >or</span
           >
@@ -164,6 +154,7 @@
     </div>
 
     <script src="./js/login.js"></script>
+    <script src="./js/lang-switcher.js"></script>
     <script src="./js/notifications.js"></script>
   </body>
 </html>
