--- a/frontend/map.html
+++ b/frontend/map.html
@@ -14,6 +14,8 @@
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
     <link rel="stylesheet" href="./css/map.css" />
+    <link rel="stylesheet" href="./css/core-responsive.css" />
+    <link rel="stylesheet" href="./css/lang-switcher.css" />
   </head>
 
   <body class="min-h-screen">
@@ -31,9 +33,38 @@
         >VIEW PROTOCOLS</a
       >
     </div>
-    <!-- Header -->
+
+    <!-- Mobile Top Navigation Bar (Sticky) -->
+    <nav class="nav-bottom-bar">
+      <a href="./index.html" class="nav-item-mobile">
+        <i data-feather="home"></i>
+        <span>Home</span>
+      </a>
+      <a href="./dashboard.html" class="nav-item-mobile">
+        <i data-feather="activity"></i>
+        <span>Dash</span>
+      </a>
+      <a href="./sos.html" class="nav-item-mobile danger">
+        <i data-feather="alert-circle"></i>
+        <span>SOS</span>
+      </a>
+      <a href="./helpline.html" class="nav-item-mobile">
+        <i data-feather="phone"></i>
+        <span>Help</span>
+      </a>
+      <a href="./map.html" class="nav-item-mobile active">
+        <i data-feather="map"></i>
+        <span>Map</span>
+      </a>
+      <a href="./protocols.html" class="nav-item-mobile">
+        <i data-feather="shield"></i>
+        <span>Tips</span>
+      </a>
+    </nav>
+
+    <!-- Desktop Header -->
     <header
-      class="sticky top-0 z-[60] bg-[#0A0A0A]/95 backdrop-blur-md px-4 py-4 md:py-6 border-b border-[#333333] mb-4"
+      class="nav-desktop-header sticky top-0 z-[60] bg-[#0A0A0A]/95 backdrop-blur-md px-4 py-4 md:py-6 border-b border-[#333333] mb-4"
     >
       <div
         class="max-w-6xl mx-auto flex flex-wrap items-center justify-between gap-4"
@@ -55,13 +86,6 @@
             <i data-feather="phone" class="w-4 h-4"></i>
             <span class="hidden sm:inline">Helplines</span>
           </a>
-
-          <!-- Language Switcher -->
-          <div class="lang-switcher-container shrink-0">
-            <button class="lang-btn active" data-lang="en">EN</button>
-            <button class="lang-btn" data-lang="hi">हिंदी</button>
-            <button class="lang-btn" data-lang="mr">मराठी</button>
-          </div>
         </div>
       </div>
     </header>
@@ -276,41 +300,9 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="./js/map.js"></script>
-    <script>
-      feather.replace();
-
-      function setLanguage(lang) {
-        localStorage.setItem("crisisMitraLang", lang);
-        document.querySelectorAll(".lang-btn").forEach((btn) => {
-          btn.classList.toggle(
-            "active",
-            btn.getAttribute("data-lang") === lang
-          );
-        });
-        // Map page doesn't have many i18n keys yet, but we reload to sync with map.js if needed
-        // Or we just reload for consistency if i18n is handled in map.js
-        location.reload();
-      }
-
-      const savedLang = localStorage.getItem("crisisMitraLang") || "en";
-      document.querySelectorAll(".lang-btn").forEach((btn) => {
-        btn.classList.toggle(
-          "active",
-          btn.getAttribute("data-lang") === savedLang
-        );
-        btn.addEventListener("click", () =>
-          setLanguage(btn.getAttribute("data-lang"))
-        );
-      });
-
-      // Lang Sync across tabs
-      window.addEventListener("storage", (e) => {
-        if (e.key === "crisisMitraLang") location.reload();
-      });
-    </script>
+    <script src="./js/lang-switcher.js"></script>
 
     <!-- Chatbot Embed -->
     <script src="https://www.noupe.com/embed/0199cc5a78967a5e8e7d90d4bec06d4f5e41.js"></script>
   </body>
 </html>
-
